# tabfile-dictionary

./: .gitignore  README.md  pyproject.toml
tabfile_dictionary/: __init__.py  dictionary.py  tabfile_dictionary.py
